Fixing broken css rule for a:hover - inside header6

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -104,3 +104,8 @@ h1 {
 h1, h1, h3, h4, h5, h6 {
       text-align: left;
 }
+
+h6 a:hover, h6 a:focus {
+    color: #343d46;
+    font-weight: inherit;
+}
